tests/baselines/reference/parserModifierOnStatementInBlock3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts (3 errors) ====
    export function foo() {
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
       export function bar() {
       ~~~~~~
!!! error TS1129: Statement expected.
       }
    }
    ~
!!! error TS1128: Declaration or statement expected.
    